// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test api params not only employeur 1`] = `
Object {
  "entreprises": Array [
    Object {
      "activitePrincipale": "Fabrication et rechapage de pneumatiques",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 133,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
      "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "matching": 20,
      "matchingEtablissement": Object {
        "address": "7 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "GE",
        "siret": "85520050701171",
      },
      "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "siren": "855200507",
    },
    Object {
      "activitePrincipale": "Édition de livres",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 3,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TRAVEL PARTNER",
      "label": "MICHELIN TRAVEL PARTNER",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "27 Cours de l’Ile Seguin 92100 Boulogne-Billancourt",
        "categorieEntreprise": "GE",
        "siret": "43367772100030",
      },
      "simpleLabel": "MICHELIN TRAVEL PARTNER",
      "siren": "433677721",
    },
    Object {
      "activitePrincipale": "Fabrication de caoutchouc synthétique",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635613",
          "idcc": 44,
          "mtime": 1562873918,
          "shortTitle": "Industries chimiques et connexes",
          "texte_de_base": "KALITEXT000005677744",
          "title": "Convention collective nationale des industries chimiques et connexes du 30 décembre 1952. Étendue par arrêté du 13 novembre 1956 JONC 12 décembre 1956",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635613",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE <b><u>MICHELIN</b></u>",
      "label": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue Edouard Michelin 33530 Bassens",
        "categorieEntreprise": "GE",
        "siret": "32852574600017",
      },
      "simpleLabel": "SIMOREP ET CIE",
      "siren": "328525746",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 11,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SOHPEM SOC OEUVRES HYGIENE <b><u>MICHELIN</b></u>",
      "label": "SOHPEM SOC OEUVRES HYGIENE MICHELIN",
      "matching": 3,
      "matchingEtablissement": Object {
        "address": "63 Rue Henri Barbusse 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "85720172700180",
      },
      "simpleLabel": "SOC OEUVRES HYGIENE MICHELIN",
      "siren": "857201727",
    },
    Object {
      "activitePrincipale": "Autres activités pour la santé humaine",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "S.S.I.D.P.A <b><u>MICHELINE</b></u> GOYHENECHE SOINS DOMICILE PERSONNES AGEES",
      "label": "S.S.I.D.P.A MICHELINE GOYHENECHE SOINS DOMICILE PERSONNES AGEES",
      "matching": 6,
      "matchingEtablissement": Object {
        "address": "Allee de Marveille 09350 Les Bordes-sur-Arize",
        "categorieEntreprise": "PME",
        "siret": "33380040700012",
      },
      "simpleLabel": "MICHELINE GOYHENECHE",
      "siren": "333800407",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE ENTREPRISE <b><u>MICHELIN</b></u>",
      "label": "COMITE ENTREPRISE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "16 Rue de Toutlemonde 49300 Cholet",
        "categorieEntreprise": "PME",
        "siret": "77563420700093",
      },
      "simpleLabel": "COMITE ENTREPRISE MICHELIN",
      "siren": "775634207",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> INDIA TECHNOLOGY CENTER LLP",
      "label": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "83483006900029",
      },
      "simpleLabel": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "siren": "834830069",
    },
    Object {
      "activitePrincipale": "Transports aériens de passagers",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635872",
          "idcc": 275,
          "mtime": 1560802019,
          "shortTitle": "Transport aérien : personnel au sol",
          "texte_de_base": "KALITEXT000005688161",
          "title": "Convention collective nationale du personnel au sol des entreprises de transport aérien du 22 mai 1959.  Etendue par arrêté du 10 janvier 1964 JONC 21 janvier 1964 et rectificatif JONC 4 février 1964.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635872",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> AIR SERVICES",
      "label": "MICHELIN AIR SERVICES",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "41474650300013",
      },
      "simpleLabel": "MICHELIN AIR SERVICES",
      "siren": "414746503",
    },
    Object {
      "activitePrincipale": "Autres assurances",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635784",
          "idcc": 2128,
          "mtime": 1562096111,
          "shortTitle": "Mutualité",
          "texte_de_base": "KALITEXT000005639853",
          "title": "Convention collective nationale de la mutualité du 31 janvier 2000.  Etendue par arrêté du 17 août 2001 JORF 28 août 2001",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635784",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MNPEM MUTUELLE NATIONALE PERSO ETS <b><u>MICHELIN</b></u>",
      "label": "MNPEM MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Rue de Bien Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "38204646400030",
      },
      "simpleLabel": "MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "siren": "382046464",
    },
    Object {
      "activitePrincipale": "Autres commerces de détail alimentaires en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 4,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE DANIEL <b><u>MICHELIN</b></u>",
      "label": "FROMAGERIE DANIEL MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "15 Grand Rue 01210 Ferney-Voltaire",
        "categorieEntreprise": "PME",
        "siret": "44869567600032",
      },
      "simpleLabel": "FROMAGERIE DANIEL MICHELIN",
      "siren": "448695676",
    },
    Object {
      "activitePrincipale": "Commerce de détail de viandes et de produits à base de viande en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635593",
          "idcc": 992,
          "mtime": 1560458317,
          "shortTitle": "Boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers",
          "texte_de_base": "KALITEXT000005674098",
          "title": "Convention collective nationale de la boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers du 12 décembre 1978, actualisée",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635593",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635534",
          "idcc": 1979,
          "mtime": 1562700340,
          "shortTitle": "Hôtels, cafés, restaurants",
          "texte_de_base": "KALITEXT000005670044",
          "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SARL ROUFFIAC - <b><u>MICHELIN</b></u>",
      "label": "SARL ROUFFIAC - MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "68 Rue Louis le Grand 39140 Bletterans",
        "categorieEntreprise": "PME",
        "siret": "37767256300014",
      },
      "simpleLabel": "SARL ROUFFIAC - MICHELIN",
      "siren": "377672563",
    },
    Object {
      "activitePrincipale": "Travaux de plâtrerie",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "idcc": 152,
          "shortTitle": "",
        },
      ],
      "etablissements": 5,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PLATRERIE PEINTURE <b><u>MICHELIN</b></u>",
      "label": "PLATRERIE PEINTURE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Avenue de Chalon 71380 Saint-Marcel",
        "categorieEntreprise": "PME",
        "siret": "51894867400040",
      },
      "simpleLabel": "PLATRERIE PEINTURE MICHELIN",
      "siren": "518948674",
    },
    Object {
      "activitePrincipale": "Exploitation de laiteries et fabrication de fromage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635449",
          "idcc": 112,
          "mtime": 1562873918,
          "shortTitle": "Lait : industrie laitière",
          "texte_de_base": "KALITEXT000005653489",
          "title": "Convention collective nationale de l'industrie laitière du 20 mai 1955, modifiée par avenant n° 34 du 29 juin 2006. Etendue par arrêté du 10 décembre 2007 JORF 18 décembre 2007",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635449",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE <b><u>MICHELIN</b></u> FABRICE",
      "label": "FROMAGERIE MICHELIN FABRICE",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "2 Place de la Mairie 25160 Saint-Point-Lac",
        "categorieEntreprise": "PME",
        "siret": "47848103900012",
      },
      "simpleLabel": "FROMAGERIE MICHELIN FABRICE",
      "siren": "478481039",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE D'ETABLISSEMENT <b><u>MICHELIN</b></u>",
      "label": "COMITE D'ETABLISSEMENT MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "6 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "PME",
        "siret": "32779802100017",
      },
      "simpleLabel": "COMITE D'ETABLISSEMENT MICHELIN",
      "siren": "327798021",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TYRE RESEARCH",
      "label": "MICHELIN TYRE RESEARCH",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83479136000029",
      },
      "simpleLabel": "MICHELIN TYRE RESEARCH",
      "siren": "834791360",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "CHEZ <b><u>MICHELINE</b></u>",
      "label": "CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "10 Rue du Louvre 75001 Paris",
        "categorieEntreprise": "PME",
        "siret": "82322762400017",
      },
      "simpleLabel": "CHEZ MICHELINE",
      "siren": "823227624",
    },
    Object {
      "activitePrincipale": "Activités des agences de voyage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635399",
          "idcc": 1710,
          "mtime": 1554837828,
          "shortTitle": "Agences de voyages et de tourisme : personnels, guides accompagnateurs et accompagnateurs",
          "texte_de_base": "KALITEXT000028755731",
          "title": "Convention collective nationale de travail du personnel des agences de voyages et de tourisme du 12 mars 1993 (réécrite par avenant du 10 décembre 2013)",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635399",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LES VOYAGES DE <b><u>MICHELINE</b></u>",
      "label": "LES VOYAGES DE MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "282 Rue Nationale 36400 La Châtre",
        "categorieEntreprise": "PME",
        "siret": "79359835000015",
      },
      "simpleLabel": "LES VOYAGES DE MICHELINE",
      "siren": "793598350",
    },
    Object {
      "activitePrincipale": "Activités des organisations associatives n.c.a.",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635177",
          "idcc": 1518,
          "mtime": 1559762451,
          "shortTitle": "Animation",
          "texte_de_base": "KALITEXT000005681198",
          "title": "Convention collective nationale des métiers de l'éducation, de la culture, des loisirs et de l'animation agissant pour l'utilité sociale et environnementale, au service des territoires (ÉCLAT) du 28 juin 1988. Étendue par arrêté du 10 janvier 1989 JORF 13 janvier 1989",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635177",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LES <b><u>MICHELINES</b></u>",
      "label": "LES MICHELINES",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Avenue de la Gare 23500 Felletin",
        "categorieEntreprise": "PME",
        "siret": "79438683900011",
      },
      "simpleLabel": "LES MICHELINES",
      "siren": "794386839",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635534",
          "idcc": 1979,
          "mtime": 1562700340,
          "shortTitle": "Hôtels, cafés, restaurants",
          "texte_de_base": "KALITEXT000005670044",
          "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "L'INTERLUDE CHEZ <b><u>MICHELINE</b></u>",
      "label": "L'INTERLUDE CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "14 Place Carnot 69002 Lyon",
        "categorieEntreprise": "PME",
        "siret": "51419390300028",
      },
      "simpleLabel": "L'INTERLUDE",
      "siren": "514193903",
    },
    Object {
      "activitePrincipale": "Activités d'architecture",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000018773893",
          "idcc": 2609,
          "mtime": 1561059873,
          "shortTitle": "Bâtiment ETAM",
          "texte_de_base": "KALITEXT000018773681",
          "title": "Convention collective nationale des employés, techniciens et agents de maîtrise du bâtiment du 12 juillet 2006",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000018773893",
        },
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PARM CONCEPT PHARMACIE REALISATION <b><u>MICHELIN</b></u>",
      "label": "PARM CONCEPT PHARMACIE REALISATION MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue du Carreau 69960 Corbas",
        "categorieEntreprise": "PME",
        "siret": "50953360000011",
      },
      "simpleLabel": "PARM CONCEPT",
      "siren": "509533600",
    },
  ],
}
`;

exports[`Test api params not only open 1`] = `
Object {
  "entreprises": Array [
    Object {
      "activitePrincipale": "Fabrication et rechapage de pneumatiques",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 133,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
      "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "matching": 20,
      "matchingEtablissement": Object {
        "address": "7 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "GE",
        "siret": "85520050701171",
      },
      "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "siren": "855200507",
    },
    Object {
      "activitePrincipale": "Édition de livres",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 3,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TRAVEL PARTNER",
      "label": "MICHELIN TRAVEL PARTNER",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "27 Cours de l’Ile Seguin 92100 Boulogne-Billancourt",
        "categorieEntreprise": "GE",
        "siret": "43367772100030",
      },
      "simpleLabel": "MICHELIN TRAVEL PARTNER",
      "siren": "433677721",
    },
    Object {
      "activitePrincipale": "Fabrication de caoutchouc synthétique",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635613",
          "idcc": 44,
          "mtime": 1562873918,
          "shortTitle": "Industries chimiques et connexes",
          "texte_de_base": "KALITEXT000005677744",
          "title": "Convention collective nationale des industries chimiques et connexes du 30 décembre 1952. Étendue par arrêté du 13 novembre 1956 JONC 12 décembre 1956",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635613",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE <b><u>MICHELIN</b></u>",
      "label": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue Edouard Michelin 33530 Bassens",
        "categorieEntreprise": "GE",
        "siret": "32852574600017",
      },
      "simpleLabel": "SIMOREP ET CIE",
      "siren": "328525746",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 11,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SOHPEM SOC OEUVRES HYGIENE <b><u>MICHELIN</b></u>",
      "label": "SOHPEM SOC OEUVRES HYGIENE MICHELIN",
      "matching": 3,
      "matchingEtablissement": Object {
        "address": "63 Rue Henri Barbusse 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "85720172700180",
      },
      "simpleLabel": "SOC OEUVRES HYGIENE MICHELIN",
      "siren": "857201727",
    },
    Object {
      "activitePrincipale": "Autres activités pour la santé humaine",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "S.S.I.D.P.A <b><u>MICHELINE</b></u> GOYHENECHE SOINS DOMICILE PERSONNES AGEES",
      "label": "S.S.I.D.P.A MICHELINE GOYHENECHE SOINS DOMICILE PERSONNES AGEES",
      "matching": 6,
      "matchingEtablissement": Object {
        "address": "Allee de Marveille 09350 Les Bordes-sur-Arize",
        "categorieEntreprise": "PME",
        "siret": "33380040700012",
      },
      "simpleLabel": "MICHELINE GOYHENECHE",
      "siren": "333800407",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE ENTREPRISE <b><u>MICHELIN</b></u>",
      "label": "COMITE ENTREPRISE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "16 Rue de Toutlemonde 49300 Cholet",
        "categorieEntreprise": "PME",
        "siret": "77563420700093",
      },
      "simpleLabel": "COMITE ENTREPRISE MICHELIN",
      "siren": "775634207",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> INDIA TECHNOLOGY CENTER LLP",
      "label": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "83483006900029",
      },
      "simpleLabel": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "siren": "834830069",
    },
    Object {
      "activitePrincipale": "Transports aériens de passagers",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635872",
          "idcc": 275,
          "mtime": 1560802019,
          "shortTitle": "Transport aérien : personnel au sol",
          "texte_de_base": "KALITEXT000005688161",
          "title": "Convention collective nationale du personnel au sol des entreprises de transport aérien du 22 mai 1959.  Etendue par arrêté du 10 janvier 1964 JONC 21 janvier 1964 et rectificatif JONC 4 février 1964.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635872",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> AIR SERVICES",
      "label": "MICHELIN AIR SERVICES",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "41474650300013",
      },
      "simpleLabel": "MICHELIN AIR SERVICES",
      "siren": "414746503",
    },
    Object {
      "activitePrincipale": "Autres assurances",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635784",
          "idcc": 2128,
          "mtime": 1562096111,
          "shortTitle": "Mutualité",
          "texte_de_base": "KALITEXT000005639853",
          "title": "Convention collective nationale de la mutualité du 31 janvier 2000.  Etendue par arrêté du 17 août 2001 JORF 28 août 2001",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635784",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MNPEM MUTUELLE NATIONALE PERSO ETS <b><u>MICHELIN</b></u>",
      "label": "MNPEM MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Rue de Bien Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "38204646400030",
      },
      "simpleLabel": "MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "siren": "382046464",
    },
    Object {
      "activitePrincipale": "Autres commerces de détail alimentaires en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 4,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE DANIEL <b><u>MICHELIN</b></u>",
      "label": "FROMAGERIE DANIEL MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "15 Grand Rue 01210 Ferney-Voltaire",
        "categorieEntreprise": "PME",
        "siret": "44869567600032",
      },
      "simpleLabel": "FROMAGERIE DANIEL MICHELIN",
      "siren": "448695676",
    },
    Object {
      "activitePrincipale": "Commerce de détail de viandes et de produits à base de viande en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635593",
          "idcc": 992,
          "mtime": 1560458317,
          "shortTitle": "Boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers",
          "texte_de_base": "KALITEXT000005674098",
          "title": "Convention collective nationale de la boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers du 12 décembre 1978, actualisée",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635593",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635534",
          "idcc": 1979,
          "mtime": 1562700340,
          "shortTitle": "Hôtels, cafés, restaurants",
          "texte_de_base": "KALITEXT000005670044",
          "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SARL ROUFFIAC - <b><u>MICHELIN</b></u>",
      "label": "SARL ROUFFIAC - MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "68 Rue Louis le Grand 39140 Bletterans",
        "categorieEntreprise": "PME",
        "siret": "37767256300014",
      },
      "simpleLabel": "SARL ROUFFIAC - MICHELIN",
      "siren": "377672563",
    },
    Object {
      "activitePrincipale": "Travaux de plâtrerie",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "idcc": 152,
          "shortTitle": "",
        },
      ],
      "etablissements": 5,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PLATRERIE PEINTURE <b><u>MICHELIN</b></u>",
      "label": "PLATRERIE PEINTURE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Avenue de Chalon 71380 Saint-Marcel",
        "categorieEntreprise": "PME",
        "siret": "51894867400040",
      },
      "simpleLabel": "PLATRERIE PEINTURE MICHELIN",
      "siren": "518948674",
    },
    Object {
      "activitePrincipale": "Exploitation de laiteries et fabrication de fromage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635449",
          "idcc": 112,
          "mtime": 1562873918,
          "shortTitle": "Lait : industrie laitière",
          "texte_de_base": "KALITEXT000005653489",
          "title": "Convention collective nationale de l'industrie laitière du 20 mai 1955, modifiée par avenant n° 34 du 29 juin 2006. Etendue par arrêté du 10 décembre 2007 JORF 18 décembre 2007",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635449",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE <b><u>MICHELIN</b></u> FABRICE",
      "label": "FROMAGERIE MICHELIN FABRICE",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "2 Place de la Mairie 25160 Saint-Point-Lac",
        "categorieEntreprise": "PME",
        "siret": "47848103900012",
      },
      "simpleLabel": "FROMAGERIE MICHELIN FABRICE",
      "siren": "478481039",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE D'ETABLISSEMENT <b><u>MICHELIN</b></u>",
      "label": "COMITE D'ETABLISSEMENT MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "6 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "PME",
        "siret": "32779802100017",
      },
      "simpleLabel": "COMITE D'ETABLISSEMENT MICHELIN",
      "siren": "327798021",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TYRE RESEARCH",
      "label": "MICHELIN TYRE RESEARCH",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83479136000029",
      },
      "simpleLabel": "MICHELIN TYRE RESEARCH",
      "siren": "834791360",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "CHEZ <b><u>MICHELINE</b></u>",
      "label": "CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "10 Rue du Louvre 75001 Paris",
        "categorieEntreprise": "PME",
        "siret": "82322762400017",
      },
      "simpleLabel": "CHEZ MICHELINE",
      "siren": "823227624",
    },
    Object {
      "activitePrincipale": "Activités des agences de voyage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635399",
          "idcc": 1710,
          "mtime": 1554837828,
          "shortTitle": "Agences de voyages et de tourisme : personnels, guides accompagnateurs et accompagnateurs",
          "texte_de_base": "KALITEXT000028755731",
          "title": "Convention collective nationale de travail du personnel des agences de voyages et de tourisme du 12 mars 1993 (réécrite par avenant du 10 décembre 2013)",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635399",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LES VOYAGES DE <b><u>MICHELINE</b></u>",
      "label": "LES VOYAGES DE MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "282 Rue Nationale 36400 La Châtre",
        "categorieEntreprise": "PME",
        "siret": "79359835000015",
      },
      "simpleLabel": "LES VOYAGES DE MICHELINE",
      "siren": "793598350",
    },
    Object {
      "activitePrincipale": "Activités des organisations associatives n.c.a.",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635177",
          "idcc": 1518,
          "mtime": 1559762451,
          "shortTitle": "Animation",
          "texte_de_base": "KALITEXT000005681198",
          "title": "Convention collective nationale des métiers de l'éducation, de la culture, des loisirs et de l'animation agissant pour l'utilité sociale et environnementale, au service des territoires (ÉCLAT) du 28 juin 1988. Étendue par arrêté du 10 janvier 1989 JORF 13 janvier 1989",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635177",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LES <b><u>MICHELINES</b></u>",
      "label": "LES MICHELINES",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Avenue de la Gare 23500 Felletin",
        "categorieEntreprise": "PME",
        "siret": "79438683900011",
      },
      "simpleLabel": "LES MICHELINES",
      "siren": "794386839",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635534",
          "idcc": 1979,
          "mtime": 1562700340,
          "shortTitle": "Hôtels, cafés, restaurants",
          "texte_de_base": "KALITEXT000005670044",
          "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "L'INTERLUDE CHEZ <b><u>MICHELINE</b></u>",
      "label": "L'INTERLUDE CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "14 Place Carnot 69002 Lyon",
        "categorieEntreprise": "PME",
        "siret": "51419390300028",
      },
      "simpleLabel": "L'INTERLUDE",
      "siren": "514193903",
    },
    Object {
      "activitePrincipale": "Activités d'architecture",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000018773893",
          "idcc": 2609,
          "mtime": 1561059873,
          "shortTitle": "Bâtiment ETAM",
          "texte_de_base": "KALITEXT000018773681",
          "title": "Convention collective nationale des employés, techniciens et agents de maîtrise du bâtiment du 12 juillet 2006",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000018773893",
        },
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PARM CONCEPT PHARMACIE REALISATION <b><u>MICHELIN</b></u>",
      "label": "PARM CONCEPT PHARMACIE REALISATION MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue du Carreau 69960 Corbas",
        "categorieEntreprise": "PME",
        "siret": "50953360000011",
      },
      "simpleLabel": "PARM CONCEPT",
      "siren": "509533600",
    },
  ],
}
`;

exports[`Test api params not with convention 1`] = `
Object {
  "entreprises": Array [
    Object {
      "activitePrincipale": "Fabrication et rechapage de pneumatiques",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 133,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
      "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "matching": 20,
      "matchingEtablissement": Object {
        "address": "7 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "GE",
        "siret": "85520050701171",
      },
      "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "siren": "855200507",
    },
    Object {
      "activitePrincipale": "Édition de livres",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 3,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TRAVEL PARTNER",
      "label": "MICHELIN TRAVEL PARTNER",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "27 Cours de l’Ile Seguin 92100 Boulogne-Billancourt",
        "categorieEntreprise": "GE",
        "siret": "43367772100030",
      },
      "simpleLabel": "MICHELIN TRAVEL PARTNER",
      "siren": "433677721",
    },
    Object {
      "activitePrincipale": "Fabrication de caoutchouc synthétique",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635613",
          "idcc": 44,
          "mtime": 1562873918,
          "shortTitle": "Industries chimiques et connexes",
          "texte_de_base": "KALITEXT000005677744",
          "title": "Convention collective nationale des industries chimiques et connexes du 30 décembre 1952. Étendue par arrêté du 13 novembre 1956 JONC 12 décembre 1956",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635613",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE <b><u>MICHELIN</b></u>",
      "label": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue Edouard Michelin 33530 Bassens",
        "categorieEntreprise": "GE",
        "siret": "32852574600017",
      },
      "simpleLabel": "SIMOREP ET CIE",
      "siren": "328525746",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 11,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SOHPEM SOC OEUVRES HYGIENE <b><u>MICHELIN</b></u>",
      "label": "SOHPEM SOC OEUVRES HYGIENE MICHELIN",
      "matching": 3,
      "matchingEtablissement": Object {
        "address": "63 Rue Henri Barbusse 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "85720172700180",
      },
      "simpleLabel": "SOC OEUVRES HYGIENE MICHELIN",
      "siren": "857201727",
    },
    Object {
      "activitePrincipale": "Autres activités pour la santé humaine",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "S.S.I.D.P.A <b><u>MICHELINE</b></u> GOYHENECHE SOINS DOMICILE PERSONNES AGEES",
      "label": "S.S.I.D.P.A MICHELINE GOYHENECHE SOINS DOMICILE PERSONNES AGEES",
      "matching": 6,
      "matchingEtablissement": Object {
        "address": "Allee de Marveille 09350 Les Bordes-sur-Arize",
        "categorieEntreprise": "PME",
        "siret": "33380040700012",
      },
      "simpleLabel": "MICHELINE GOYHENECHE",
      "siren": "333800407",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE ENTREPRISE <b><u>MICHELIN</b></u>",
      "label": "COMITE ENTREPRISE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "16 Rue de Toutlemonde 49300 Cholet",
        "categorieEntreprise": "PME",
        "siret": "77563420700093",
      },
      "simpleLabel": "COMITE ENTREPRISE MICHELIN",
      "siren": "775634207",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> INDIA TECHNOLOGY CENTER LLP",
      "label": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "83483006900029",
      },
      "simpleLabel": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "siren": "834830069",
    },
    Object {
      "activitePrincipale": "Transports aériens de passagers",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635872",
          "idcc": 275,
          "mtime": 1560802019,
          "shortTitle": "Transport aérien : personnel au sol",
          "texte_de_base": "KALITEXT000005688161",
          "title": "Convention collective nationale du personnel au sol des entreprises de transport aérien du 22 mai 1959.  Etendue par arrêté du 10 janvier 1964 JONC 21 janvier 1964 et rectificatif JONC 4 février 1964.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635872",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> AIR SERVICES",
      "label": "MICHELIN AIR SERVICES",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "41474650300013",
      },
      "simpleLabel": "MICHELIN AIR SERVICES",
      "siren": "414746503",
    },
    Object {
      "activitePrincipale": "Autres assurances",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635784",
          "idcc": 2128,
          "mtime": 1562096111,
          "shortTitle": "Mutualité",
          "texte_de_base": "KALITEXT000005639853",
          "title": "Convention collective nationale de la mutualité du 31 janvier 2000.  Etendue par arrêté du 17 août 2001 JORF 28 août 2001",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635784",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MNPEM MUTUELLE NATIONALE PERSO ETS <b><u>MICHELIN</b></u>",
      "label": "MNPEM MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Rue de Bien Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "38204646400030",
      },
      "simpleLabel": "MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "siren": "382046464",
    },
    Object {
      "activitePrincipale": "Autres commerces de détail alimentaires en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 4,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE DANIEL <b><u>MICHELIN</b></u>",
      "label": "FROMAGERIE DANIEL MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "15 Grand Rue 01210 Ferney-Voltaire",
        "categorieEntreprise": "PME",
        "siret": "44869567600032",
      },
      "simpleLabel": "FROMAGERIE DANIEL MICHELIN",
      "siren": "448695676",
    },
    Object {
      "activitePrincipale": "Commerce de détail de viandes et de produits à base de viande en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635593",
          "idcc": 992,
          "mtime": 1560458317,
          "shortTitle": "Boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers",
          "texte_de_base": "KALITEXT000005674098",
          "title": "Convention collective nationale de la boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers du 12 décembre 1978, actualisée",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635593",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635534",
          "idcc": 1979,
          "mtime": 1562700340,
          "shortTitle": "Hôtels, cafés, restaurants",
          "texte_de_base": "KALITEXT000005670044",
          "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SARL ROUFFIAC - <b><u>MICHELIN</b></u>",
      "label": "SARL ROUFFIAC - MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "68 Rue Louis le Grand 39140 Bletterans",
        "categorieEntreprise": "PME",
        "siret": "37767256300014",
      },
      "simpleLabel": "SARL ROUFFIAC - MICHELIN",
      "siren": "377672563",
    },
    Object {
      "activitePrincipale": "Travaux de plâtrerie",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "idcc": 152,
          "shortTitle": "",
        },
      ],
      "etablissements": 5,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PLATRERIE PEINTURE <b><u>MICHELIN</b></u>",
      "label": "PLATRERIE PEINTURE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Avenue de Chalon 71380 Saint-Marcel",
        "categorieEntreprise": "PME",
        "siret": "51894867400040",
      },
      "simpleLabel": "PLATRERIE PEINTURE MICHELIN",
      "siren": "518948674",
    },
    Object {
      "activitePrincipale": "Exploitation de laiteries et fabrication de fromage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635449",
          "idcc": 112,
          "mtime": 1562873918,
          "shortTitle": "Lait : industrie laitière",
          "texte_de_base": "KALITEXT000005653489",
          "title": "Convention collective nationale de l'industrie laitière du 20 mai 1955, modifiée par avenant n° 34 du 29 juin 2006. Etendue par arrêté du 10 décembre 2007 JORF 18 décembre 2007",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635449",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE <b><u>MICHELIN</b></u> FABRICE",
      "label": "FROMAGERIE MICHELIN FABRICE",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "2 Place de la Mairie 25160 Saint-Point-Lac",
        "categorieEntreprise": "PME",
        "siret": "47848103900012",
      },
      "simpleLabel": "FROMAGERIE MICHELIN FABRICE",
      "siren": "478481039",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE D'ETABLISSEMENT <b><u>MICHELIN</b></u>",
      "label": "COMITE D'ETABLISSEMENT MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "6 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "PME",
        "siret": "32779802100017",
      },
      "simpleLabel": "COMITE D'ETABLISSEMENT MICHELIN",
      "siren": "327798021",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TYRE RESEARCH",
      "label": "MICHELIN TYRE RESEARCH",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83479136000029",
      },
      "simpleLabel": "MICHELIN TYRE RESEARCH",
      "siren": "834791360",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "CHEZ <b><u>MICHELINE</b></u>",
      "label": "CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "10 Rue du Louvre 75001 Paris",
        "categorieEntreprise": "PME",
        "siret": "82322762400017",
      },
      "simpleLabel": "CHEZ MICHELINE",
      "siren": "823227624",
    },
    Object {
      "activitePrincipale": "Activités des agences de voyage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635399",
          "idcc": 1710,
          "mtime": 1554837828,
          "shortTitle": "Agences de voyages et de tourisme : personnels, guides accompagnateurs et accompagnateurs",
          "texte_de_base": "KALITEXT000028755731",
          "title": "Convention collective nationale de travail du personnel des agences de voyages et de tourisme du 12 mars 1993 (réécrite par avenant du 10 décembre 2013)",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635399",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LES VOYAGES DE <b><u>MICHELINE</b></u>",
      "label": "LES VOYAGES DE MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "282 Rue Nationale 36400 La Châtre",
        "categorieEntreprise": "PME",
        "siret": "79359835000015",
      },
      "simpleLabel": "LES VOYAGES DE MICHELINE",
      "siren": "793598350",
    },
    Object {
      "activitePrincipale": "Activités des organisations associatives n.c.a.",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635177",
          "idcc": 1518,
          "mtime": 1559762451,
          "shortTitle": "Animation",
          "texte_de_base": "KALITEXT000005681198",
          "title": "Convention collective nationale des métiers de l'éducation, de la culture, des loisirs et de l'animation agissant pour l'utilité sociale et environnementale, au service des territoires (ÉCLAT) du 28 juin 1988. Étendue par arrêté du 10 janvier 1989 JORF 13 janvier 1989",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635177",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LES <b><u>MICHELINES</b></u>",
      "label": "LES MICHELINES",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Avenue de la Gare 23500 Felletin",
        "categorieEntreprise": "PME",
        "siret": "79438683900011",
      },
      "simpleLabel": "LES MICHELINES",
      "siren": "794386839",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635534",
          "idcc": 1979,
          "mtime": 1562700340,
          "shortTitle": "Hôtels, cafés, restaurants",
          "texte_de_base": "KALITEXT000005670044",
          "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "L'INTERLUDE CHEZ <b><u>MICHELINE</b></u>",
      "label": "L'INTERLUDE CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "14 Place Carnot 69002 Lyon",
        "categorieEntreprise": "PME",
        "siret": "51419390300028",
      },
      "simpleLabel": "L'INTERLUDE",
      "siren": "514193903",
    },
    Object {
      "activitePrincipale": "Activités d'architecture",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000018773893",
          "idcc": 2609,
          "mtime": 1561059873,
          "shortTitle": "Bâtiment ETAM",
          "texte_de_base": "KALITEXT000018773681",
          "title": "Convention collective nationale des employés, techniciens et agents de maîtrise du bâtiment du 12 juillet 2006",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000018773893",
        },
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PARM CONCEPT PHARMACIE REALISATION <b><u>MICHELIN</b></u>",
      "label": "PARM CONCEPT PHARMACIE REALISATION MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue du Carreau 69960 Corbas",
        "categorieEntreprise": "PME",
        "siret": "50953360000011",
      },
      "simpleLabel": "PARM CONCEPT",
      "siren": "509533600",
    },
  ],
}
`;

exports[`Test entreprise search correct siren 1`] = `
Object {
  "caractereEmployeurUniteLegale": "O",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "idcc": 9999,
      "shortTitle": "",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "etablissements": 133,
  "etatAdministratifEtablissement": "F",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN PAYS NON TROPICAUX",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN PAYS NON TROPICAUX",
  "matching": 143,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test etablissement search correct siret 1`] = `
Object {
  "activitePrincipale": "Traitement de données, hébergement et activités connexes",
  "address": "107 Rue Servient 69003 Lyon",
  "caractereEmployeurUniteLegale": "O",
  "convention": Object {
    "etat": "VIGUEUR_ETEN",
    "id": "KALICONT000005635597",
    "idcc": 45,
    "mtime": 1562873918,
    "shortTitle": "Caoutchouc",
    "texte_de_base": "KALITEXT000005673838",
    "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
    "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
  },
  "etablissements": 133,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 1,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
  "siret": "85520050703169",
}
`;

exports[`Test search generic search 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "caractereEmployeurUniteLegale": "O",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "etablissements": 133,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 20,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test search unranked search 1`] = `
Object {
  "activitePrincipale": "Autres activités auxiliaires de services financiers, hors assurance et caisses de retraite",
  "caractereEmployeurUniteLegale": "O",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635409",
      "idcc": 1147,
      "mtime": 1562096111,
      "shortTitle": "Personnel des cabinets médicaux",
      "texte_de_base": "KALITEXT000005681857",
      "title": "Convention collective nationale du personnel des cabinets médicaux  du 14 octobre 1981",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635409",
    },
  ],
  "etablissements": 1,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "SCM PIERRE FIGUEREDO ET <b><u>MICHELINE</b></u>",
  "label": "SCM PIERRE FIGUEREDO ET MICHELINE",
  "matching": 1,
  "matchingEtablissement": Object {
    "address": "105 Rue Jean Monnet 06210 Mandelieu-la-Napoule",
    "siret": "89334473900014",
  },
  "simpleLabel": "SCM PIERRE FIGUEREDO ET MICHELINE FIGUEREDO",
  "siren": "893344739",
}
`;
